--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-317.7KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-181.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-662.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-161.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: zz6.91js.pw, port: 10051, type: trojan, password: a13820c547fa34c5c45515c12f0cd576, sni: zz6.91js.pw, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇨🇳 中国-463.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.32MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.02MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-317.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-317.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-317.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-317.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-317.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-317.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-317.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
