--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-662.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇸🇬 新加坡-1.32MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.15MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.02MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-333.3KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-382.4KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.89MB/s(Youtube:不良林), server: ct.91js.pw, port: 10051, type: trojan, password: a13820c547fa34c5c45515c12f0cd576, sni: ct.91js.pw, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-411.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
